# system-monitor

./: CMakeLists.txt  README.md
src/: main.cpp  monitor.cpp  monitor.hpp
